--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,10 @@ jobs:
               chmod +x kubectl
               sudo mv kubectl /usr/local/bin/
       - run:
+          name: Install gke-gcloud-auth-plugin
+          command: |
+              sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+      - run:
           name: Authenticate with google cloud
           command: |
               echo "$GCLOUD_SERVICE_KEY" | base64 --decode > gcp-key.json
